Reading the first book

--- a/haskell/Introduction.ipynb
+++ b/haskell/Introduction.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "type SímboloProposicional = String"
+    "### Lectures from: Temas de “Programación funcional” (curso 2011–12)"
    ]
   },
   {
